# Hyposat

./: CMakeLists.txt  CONTENTS.md  HYPOMOD_HISTORY.md  HYPOSAT_HISTORY.md  History of Software Develpoment  LICENSE  README.md  hypomod.bat  hypomod.sh  hyposat.bat  hyposat.sh
cmake/modules/: FindIntelFortranRuntimeLibs24.cmake
data/: ek137.tvel  ek137_A.hed  ek137_A.tbl  elcordir.tbl  hyposat-parameter_all  isc_stalist  stations  stations.cor  tau_Russell_etal.README
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst
docs/source/usage/: example.rst
documentation/: HYPOMOD_HISTORY.md  HYPOSAT_HISTORY.md  hyposat-parameter_all
examples/: 0000371686_hyposat-parameter  0000371686_in.isf  4kamran  README  calabria2.hyposat.mod  confidence_ellipse_js.m  confidence_ellipse_ori.m  default.depth0.5.grid  ellip_test.m  hypomod-out  hypomod-out.tele  hyposat-in  hyposat-in.arcbul  hyposat-in.calabria  hyposat-in.ellip  hyposat-in.isc1  hyposat-in.japan  hyposat-in.net  hyposat-in.regional  hyposat-in.single_array  hyposat-in.tele  hyposat-in.tele-array  hyposat-in.test  hyposat-in.test10  hyposat-in.test2  hyposat-in.test3  hyposat-in.test4  hyposat-in.test5  hyposat-in.test6  hyposat-in.test7  hyposat-in.test8  hyposat-in.test9  hyposat-isf  hyposat-isf.net  hyposat-json  hyposat-out  hyposat-out.0  hyposat-out.arcbul  hyposat-out.calabria  hyposat-out.ellip  (+53 more)
msrc/: CMakeLists.txt  Makefile  crust_10.h  gm2.h  gmi.h  hypomod.f  hyposat.f  hyposat_clib.c  hyposat_cross.f  hyposat_crust.f  hyposat_crust_mod.f  hyposat_depth.f  hyposat_file.f  hyposat_geo.f  hyposat_geotab.f  hyposat_inv.f  hyposat_lib.f  hyposat_loc.f  hyposat_mag.f  hyposat_out.f  hyposat_phase.f  hyposat_plane.f  hyposat_time.f  isf_head.h  isf_i_o.f  isf_in.f  isf_out.f  jsonstorage.cpp  jsonstorage.h  libtau_h.f  make_hyposat  model.h  modelc.h  modelg.h  phlist.h  run_make  ttlim.h
